fix \& error main.tex

--- a/main.tex
+++ b/main.tex
@@ -253,7 +253,7 @@
 \resumeSubHeadingListStart
 \resumeProjectTitle{Work Management}{(Projects Management)}
 \resumeDesc{Managed software projects, overseeing tasks, processes, and deliverables.}
-\resumeItemListTitle{Team Composition:} Size: 3+ (Backend, Frontend & Mobile, QA).
+\resumeItemListTitle{Team Composition:} Size: 3+ (Backend, Frontend \& Mobile, QA).
 \par
 \resumeItemListTitle{My Responsibility:}
 \resumeItemListStart
