--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 % Author : Vu Chi Cong
 % Based on template by Jake Gutierrez
 % Supported by ChatGPT
+% Inspired by @tommy3322
 % License : MIT
 %------------------------
 
