--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Vu Chi Cong
+% Author : Joe
 % Based on template by Jake Gutierrez
 % Supported by ChatGPT
 % Inspired by @tommy3322
@@ -37,6 +37,8 @@
 \raggedright
 \setlength{\tabcolsep}{0in}
 
+\renewcommand{\baselinestretch}{1}
+
 % Sections formatting
 \titleformat{\section}{
   \vspace{-0pt}\scshape\raggedright\bfseries
@@ -44,10 +46,10 @@
 
 % Custom commands
 \newcommand{\resumeEntry}[3]{
-  \vspace{-2pt}\item
+  \vspace{0pt}\item
     \begin{tabular*}{1\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
-      #3 \vspace{4pt}
+      {#3} \vspace{2pt}
     \end{tabular*}
 }
 \newcommand{\resumeProjectTitle}[2]{
@@ -57,19 +59,19 @@
     \end{tabular*}\vspace{2pt}
 }
 \newcommand{\resumeDesc}[1]{
-  {#1\\ \vspace{0px}}
+  {#1\\ \vspace{2px}}
 }
 \newcommand{\resumeItem}[1]{
   \item{#1 \vspace{-2pt}}
 }
 
 \newcommand{\resumeItemListTitle}[1]{%
-  \vspace{4pt} \textbf{#1} \vspace{-2pt}%
+  \vspace{0pt} \textbf{#1} \vspace{-2pt}%
 }
 \newcommand{\resumeItemListStart}{\vspace{-4pt}\begin{itemize}[leftmargin=12px]}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 \newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0pt, label={}]}
-\newcommand{\resumeSubHeadingListEnd}{\end{itemize}\vspace{-5pt}}
+\newcommand{\resumeSubHeadingListEnd}{\end{itemize}\vspace{-8pt}}
 
 %-------------------------------------------
 %%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -153,11 +155,9 @@
 \resumeEntry
   {ITPlus Academy}{Aug 2016 - Mar 2018}
   {Software development course for website and mobile application development}
-\resumeItemListTitle{Languages:}
-\begin{tabularx}{\textwidth}{>{\bfseries}l @{\hskip 10pt} X}
-  Vietnamese & Native \\
-  English & Intermediate
-\end{tabularx}
+\resumeItemListTitle{Languages:} 
+\par
+\resumeDesc{English (Intermediate - needs improvement in Speaking), Vietnamese (Native)}
   
 \resumeSubHeadingListEnd
 
@@ -168,13 +168,14 @@
 \resumeProjectTitle{The Shopi}{(Scalable e-commerce platform with microservices architecture)}
 \resumeDesc{An e-commerce platform built with a microservices architecture. It is designed to handle essential workflows such as user authentication, product management, cart operations, order processing, and real-time communication.}
 \resumeDesc{The project is powered entirely by Node.js, with a hybrid API Gateway that uses HTTP for client-facing requests and gRPC for service-to-service communication.}
-\resumeItemListTitle{Main Features:}
+\resumeItemListTitle{Main Features:} (Focus: Backend)
 \resumeItemListStart
     \resumeItem{Microservices Architecture: Separate services for features communicating via gRPC and RabbitMQ. Containerized with Docker for deployment flexibility.}
     \resumeItem{Authentication: Supports OAuth (GitHub SSO) and email-password authentication with JWT, Key-Token, Fingerprint, and RBAC for secure multi-device refresh tokens.}
     \resumeItem{High performance Search: Utilizes Elasticsearch for fast object searching, syncing data whenever a new object is added/updated.}
     \resumeItem{Real-time Communication: A Socket service handles connections for chat and presence status.}
     \resumeItem{Asynchronous Event Handling: RabbitMQ for handling events like object create/updates, authentication requirements, and payment confirmations, etc.}
+    \resumeItem{Modern Frontend: Built with Next.js and Shadcn/ui for SSR and a flexible, customizable component system.}
 \resumeItemListEnd
 \resumeItemListTitle{Technical Stack:}
 \resumeItemListStart
@@ -197,7 +198,7 @@
 \resumeDesc{Built a platform to facilitate token pre-sales, integrating blockchain technology and third-party services for efficient and user-friendly digital asset management.}
 \resumeItemListTitle{Team Composition:} 2 (1 Developer and 1 Designer)
 \par
-\resumeItemListTitle{My Responsibility:}
+\resumeItemListTitle{My Responsibility:} (Full-Stack)
 \resumeItemListStart
     \resumeItem{Smart Contract Integration: Designed and implemented smart contracts for presale token purchases.}
     \resumeItem{Full-Stack Development: Developed a landing page, client dashboard, and admin dashboard using React. Built a Node.js backend server to manage operations, supporting over 4,000 users.}
@@ -216,10 +217,10 @@
 \resumeDesc{A mobile app designed to deliver personalized workout courses tailored to specific muscle groups.}
 \resumeItemListTitle{Team Composition:} 4 (PM, Designer, Backend, and me (Frontend))
 \par
-\resumeItemListTitle{My Responsibility:}
+\resumeItemListTitle{My Responsibility:} (Focus: Frontend, Support: Backend)
 \resumeItemListStart
-    \resumeItem{Frontend Development: Developed the mobile UI to enhance user experience and engagement.}
-    \resumeItem{Backend Integration: Collaborated with the backend team to ensure seamless API integration.}
+    \resumeItem{Frontend Development: Developed the mobile UI to enhance UX, implemented OAuth2 authentication with Azure and integrated a custom login/signup template for Azure authentication.}
+    \resumeItem{Backend Integration: Collaborated with the backend team to ensure seamless API integration. Supported and contributed to writing CRUD operations for content management. }
     \resumeItem{Azure API Research: Researched Azure Portal APIs, authored detailed integration documents for the team, and implemented Azure Pipelines to reduce deployment time.}
 \resumeItemListEnd
 \resumeItemListTitle{Achievements:}
@@ -237,9 +238,9 @@
 \resumeDesc{An online platform designed to enhance student-teacher interaction through real-time video streaming, improving the overall online learning experience.}
 \resumeItemListTitle{Team Composition:} 3 (React Native, 1 QA).
 \par
-\resumeItemListTitle{My Responsibility:}
+\resumeItemListTitle{My Responsibility:} (Focus: Frontend, Support: Backend)
 \resumeItemListStart
-    \resumeItem{Frontend Development: Led the frontend development using React Native and Vue, focusing on UI design and real-time video streaming capabilities.}
+    \resumeItem{Frontend Development: Led the frontend development using React Native and Vue, focusing on UI/UX and real-time video streaming feature. Made sure web and mobile work smoothly together.}
     \resumeItem{Backend Contribution: Collaborated with client's backend team to contribute for BE real-time features.}
 \resumeItemListEnd
 \resumeItemListTitle{Achievements:}
@@ -256,7 +257,7 @@
 \resumeDesc{Managed software projects, overseeing tasks, processes, and deliverables.}
 \resumeItemListTitle{Team Composition:} Size: 3+ (Backend, Frontend \& Mobile, QA).
 \par
-\resumeItemListTitle{My Responsibility:}
+\resumeItemListTitle{My Responsibility:} (Full-Stack)
 \resumeItemListStart
     \resumeItem{Project Lifecycle Management: Coordinated team members through all phases of the project lifecycle, including planning, development, and deployment.}
     \resumeItem{Frontend and Mobile Development: Contributed to frontend and mobile development, implementing key features and ensuring smooth UX.}
@@ -275,7 +276,7 @@
 \resumeDesc{A comprehensive school management system designed to efficiently manage classrooms, students, schedules, and includes reminder functionalities.}
 \resumeItemListTitle{Team Composition:} 4+ (QA, Full-Stack, Frontend, and Mobile).
 \par
-\resumeItemListTitle{My Responsibility:}
+\resumeItemListTitle{My Responsibility:} (Focus: Backend, Support: Frontend)
 \resumeItemListStart
     \resumeItem{API Development: Implemented authentication and data management with Entity Framework.}
     \resumeItem{Frontend Support: Assisted frontend developers as needed, helping with frontend-related tasks and resolving any issues.}
@@ -293,7 +294,7 @@
 \resumeDesc{An app for tracking travel distance and earning rewards through quest completion.}
 \resumeItemListTitle{Team Composition:} 2 (both are Full-Stack).
 \par
-\resumeItemListTitle{My Responsibility:}
+\resumeItemListTitle{My Responsibility:} (Frontend)
 \resumeItemListStart
     \resumeItem{Google Maps Integration: Integrated the Google Maps API to enable distance tracking functionality within the application.}
     \resumeItem{Mobile UI Development: Developed and implemented the mobile UI to ensure a functional user experience.}
@@ -312,7 +313,7 @@
 \resumeDesc{A job marketplace focused on services related to house cleaning and hotels, integrating payment systems and providing directions for seamless transactions.}
 \resumeItemListTitle{Team Composition:} 7+ (PM, Designer, 2 Backend, 2 Frontend, QA).
 \par
-\resumeItemListTitle{My Responsibility:}
+\resumeItemListTitle{My Responsibility:} (Frontend)
 \resumeItemListStart
     \resumeItem{Mobile Development: Built the job marketplace UI based on Figma designs.}
     \resumeItem{Backend Integration: Assisted in backend tasks by collaborating with backend developers to ensure seamless integration between mobile UI and core features.}
@@ -331,7 +332,7 @@
 \resumeDesc{A platform aimed at providing students with information about current and upcoming events in their vicinity.}
 \resumeItemListTitle{Team Composition:} 6 (PM, Designer, 2 Backend, 2 Frontend).
 \par
-\resumeItemListTitle{My Responsibility:}
+\resumeItemListTitle{My Responsibility:} (Frontend)
 \resumeItemListStart
     \resumeItem{Frontend Development: Created the frontend web application following Figma designs, ensuring a functional and responsive user experience.}
     \resumeItem{Frontend Management: Managed frontend tasks, including task allocation and progress tracking.}
@@ -354,7 +355,7 @@
 \resumeItemListStart
     \resumeItem{Achieved a Performance score of over 90 on Google PageSpeed Insights.}
 \resumeItemListEnd
-\resumeItemListTitle{Main Features:}
+\resumeItemListTitle{Main Features:} (Frontend)
 \resumeItemListStart
     \resumeItem{Responsive Design: Optimized for all screen sizes with Tailwind CSS, providing an engaging experience on both desktop and mobile.}
     \resumeItem{Deployed with Vercel: Hosted on Vercel with automatic updates on every Git commit.}
@@ -369,7 +370,7 @@
 \resumeSubHeadingListStart
 \resumeProjectTitle{MEME Network}{(Presale Token on Sepolia Testnet)}
 \resumeDesc{A decentralized application (DApp) that combines a React frontend with a smart contract using Solidity, allowing users to interact with the Ethereum blockchain.}
-\resumeItemListTitle{Main Features:}
+\resumeItemListTitle{Main Features:} (Full-Stack)
 \resumeItemListStart
     \resumeItem{Smart Contract Development: Created using Hardhat, enabling deployment and testing on the Ethereum network.}
     \resumeItem{Blockchain Interaction: Users can interact with smart contract functions directly from the React frontend.}
@@ -380,8 +381,10 @@
 \resumeItemListTitle{Objective:} Developed a full-stack web3 application integrating React with smart contracts using Hardhat and wallet connectivity.
 \par
 \resumeItemListTitle{Technical Stack:} React, Tailwind CSS, Solidity, Hardhat, Rainbow, Ethers.js.
-\resumeSubHeadingListEnd
+\par
 \noindent\textbf{Source:} \url{github.com/cngvc/simple-token-presale} | \url{meme-network.congvc.com}
+
+\resumeSubHeadingListEnd
 
 %-------------------------------------------
 \end{document}
