--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@
 
 %-----------SUMMARY-----------
 \section{Summary}
-\resumeDesc{5+ years of experience in building large-scale projects (combining both Backend and Frontend development) using Node.js ,React and Next.js. Skilled in optimizing backend processes, UI/UX and working with cross-functional teams and product development through diverse domains.}
+\resumeDesc{5+ years of experience in web and mobile development with Node.js, React, and Next.js, focusing on optimizing backend processes, enhancing UI/UX, and collaborating with cross-functional teams in product development. Experienced in working on various application models, from startups to mid-sized and large-scale projects.}
 
 
 %-----------EXPERIENCE-----------
@@ -136,7 +136,7 @@
     \resumeItem{Worked closely with design and testing teams to ensure seamless functionality and an optimal user experience.}
     \resumeItem{Gained backend experience by contributing to small backend tasks, supporting the backend development alongside the team.}
   \resumeItemListEnd
-  \resumeDesc{Technical stack: React Native.}
+  \resumeDesc{Technical Stack: React Native.}
 \resumeSubHeadingListEnd
 
 %-----------SKILLS-----------
