--- a/main.tex
+++ b/main.tex
@@ -158,38 +158,7 @@
 \resumeItemListTitle{Languages:} 
 \par
 \resumeDesc{English (Intermediate - needs improvement in Speaking), Vietnamese (Native)}
-  
 \resumeSubHeadingListEnd
-
-%-----------GROWING PROJECTS-----------
-\section{Growing Project}
-\resumeDesc{A project I’m developing to showcase in my portfolio}
-\resumeSubHeadingListStart
-\resumeProjectTitle{The Shopi}{(Scalable e-commerce platform with microservices architecture)}
-\resumeDesc{An e-commerce platform built with a microservices architecture. It is designed to handle essential workflows such as user authentication, product management, cart operations, order processing, and real-time communication.}
-\resumeDesc{The project is powered entirely by Node.js, with a hybrid API Gateway that uses HTTP for client-facing requests and gRPC for service-to-service communication.}
-\resumeItemListTitle{Main Features:} (Focus: Backend)
-\resumeItemListStart
-    \resumeItem{Microservices Architecture: Separate services for features communicating via gRPC and RabbitMQ. Containerized with Docker for deployment flexibility.}
-    \resumeItem{Authentication: Supports OAuth (GitHub SSO) and email-password authentication with JWT, Key-Token, Fingerprint, and RBAC for secure multi-device refresh tokens.}
-    \resumeItem{High performance Search: Utilizes Elasticsearch for fast object searching, syncing data whenever a new object is added/updated.}
-    \resumeItem{Real-time Communication: A Socket service handles connections for chat and presence status.}
-    \resumeItem{Asynchronous Event Handling: RabbitMQ for handling events like object create/updates, authentication requirements, and payment confirmations, etc.}
-    \resumeItem{Modern Frontend: Built with Next.js and Shadcn/ui for SSR and a flexible, customizable component system.}
-\resumeItemListEnd
-\resumeItemListTitle{Technical Stack:}
-\resumeItemListStart
-    \resumeItem{Backend: Node.js, Express.js, TypeORM, Elasticsearch.}
-    \resumeItem{Frontend: Next.js, Shadcn.}
-    \resumeItem{Database: MongoDB, MySQL, Redis.}
-    \resumeItem{Messaging: RabbitMQ, gRPC.}
-    \resumeItem{Infrastructure: Docker, K8s.}
-\resumeItemListEnd
-\resumeItemListTitle{Objective:} Build a scalable e-commerce system with microservices architecture, as a way to gain experience with large projects due to limited time working on them in a job. Future enhancements will include GraphQL, a Recommendation System, Load Balancing, ELS Stack, CI/CD with Kubernetes and Jenkins, and a fully developed frontend.
-\par
-\noindent\textbf{Source:} \url{github.com/cngvc/theshopi}
-\resumeSubHeadingListEnd
-
 
 %-----------PARTICIPATED PROJECTS-----------
 \section{Participated Projects}
@@ -232,7 +201,6 @@
 \resumeItemListTitle{Technical Stack:} React Native, Expo Go, Azure Portal, Azure Pipelines.
 \resumeSubHeadingListEnd
 \noindent\rule{\textwidth}{0.4pt}
-
 \resumeSubHeadingListStart
 \resumeProjectTitle{GrapeSEED Connect}{(Stream Learning Platform)}
 \resumeDesc{An online platform designed to enhance student-teacher interaction through real-time video streaming, improving the overall online learning experience.}
@@ -251,7 +219,6 @@
 \resumeItemListTitle{Technical Stack:} Vue, React Native, Agora SDK, Zoom SDK, .NET Core.
 \resumeSubHeadingListEnd
 \noindent\rule{\textwidth}{0.4pt}
-
 \resumeSubHeadingListStart
 \resumeProjectTitle{Work Management}{(Projects Management)}
 \resumeDesc{Managed software projects, overseeing tasks, processes, and deliverables.}
@@ -270,7 +237,6 @@
 \resumeItemListTitle{Technical Stack:} React, React Native, Groovy.
 \resumeSubHeadingListEnd
 \noindent\rule{\textwidth}{0.4pt}
-
 \resumeSubHeadingListStart
 \resumeProjectTitle{Dance School}{(School Management)}
 \resumeDesc{A comprehensive school management system designed to efficiently manage classrooms, students, schedules, and includes reminder functionalities.}
@@ -288,7 +254,6 @@
 \resumeItemListTitle{Technical Stack:} React, React Native, .NET Core.
 \resumeSubHeadingListEnd
 \noindent\rule{\textwidth}{0.4pt}
-
 \resumeSubHeadingListStart
 \resumeProjectTitle{Miles At Sea}{(Travel Tracking)}
 \resumeDesc{An app for tracking travel distance and earning rewards through quest completion.}
@@ -307,7 +272,6 @@
 \resumeItemListTitle{Technical Stack:} React Native, Google Maps API.
 \resumeSubHeadingListEnd
 \noindent\rule{\textwidth}{0.4pt}
-
 \resumeSubHeadingListStart
 \resumeProjectTitle{Osouji}{(Cleaner Booking)}
 \resumeDesc{A job marketplace focused on services related to house cleaning and hotels, integrating payment systems and providing directions for seamless transactions.}
@@ -326,7 +290,6 @@
 \resumeItemListTitle{Technical Stack:} React Native.
 \resumeSubHeadingListEnd
 \noindent\rule{\textwidth}{0.4pt}
-
 \resumeSubHeadingListStart
 \resumeProjectTitle{Vio Studio}{(Event Information Platform)}
 \resumeDesc{A platform aimed at providing students with information about current and upcoming events in their vicinity.}
@@ -363,10 +326,9 @@
 \resumeItemListTitle{Objective:} Created a responsive and visually appealing website to showcase my projects, skills, and experience.
 \par
 \resumeItemListTitle{Technical Stack:} React, Tailwind CSS, Shadcn
-\resumeSubHeadingListEnd
 \noindent\textbf{Source:} \url{github.com/cngvc/joes-portfolio} | \url{congvc.com}
+\resumeSubHeadingListEnd
 \noindent\rule{\textwidth}{0.4pt}
-
 \resumeSubHeadingListStart
 \resumeProjectTitle{MEME Network}{(Presale Token on Sepolia Testnet)}
 \resumeDesc{A decentralized application (DApp) that combines a React frontend with a smart contract using Solidity, allowing users to interact with the Ethereum blockchain.}
@@ -383,7 +345,32 @@
 \resumeItemListTitle{Technical Stack:} React, Tailwind CSS, Solidity, Hardhat, Rainbow, Ethers.js.
 \par
 \noindent\textbf{Source:} \url{github.com/cngvc/simple-token-presale} | \url{meme-network.congvc.com}
-
+\resumeSubHeadingListEnd
+\noindent\rule{\textwidth}{0.4pt}
+\resumeSubHeadingListStart
+\resumeProjectTitle{The Shopi}{(Scalable e-commerce platform with microservices architecture)}
+\resumeDesc{An e-commerce platform built with a microservices architecture. It is designed to handle essential workflows such as user authentication, product management, cart operations, order processing, and real-time communication.}
+\resumeDesc{The project is powered entirely by Node.js, with a hybrid API Gateway that uses HTTP for client-facing requests and gRPC for service-to-service communication.}
+\resumeItemListTitle{Main Features:} (Focus: Backend)
+\resumeItemListStart
+    \resumeItem{Microservices Architecture: Separate services for features communicating via gRPC and RabbitMQ. Containerized with Docker for deployment flexibility.}
+    \resumeItem{Authentication: Supports OAuth (GitHub SSO) and email-password authentication with JWT, Key-Token, Fingerprint, and RBAC for secure multi-device refresh tokens.}
+    \resumeItem{High performance Search: Utilizes Elasticsearch for fast object searching, syncing data whenever a new object is added/updated.}
+    \resumeItem{Real-time Communication: A Socket service handles connections for chat and presence status.}
+    \resumeItem{Asynchronous Event Handling: RabbitMQ for handling events like object create/updates, authentication requirements, and payment confirmations, etc.}
+    \resumeItem{Modern Frontend: Built with Next.js and Shadcn/ui for SSR and a flexible, customizable component system.}
+\resumeItemListEnd
+\resumeItemListTitle{Technical Stack:}
+\resumeItemListStart
+    \resumeItem{Backend: Node.js, Express.js, TypeORM, Elasticsearch.}
+    \resumeItem{Frontend: Next.js, Shadcn.}
+    \resumeItem{Database: MongoDB, MySQL, Redis.}
+    \resumeItem{Messaging: RabbitMQ, gRPC.}
+    \resumeItem{Infrastructure: Docker, K8s.}
+\resumeItemListEnd
+\resumeItemListTitle{Objective:} Build a scalable e-commerce system with microservices architecture, as a way to gain experience with large projects due to limited time working on them in a job. Future enhancements will include GraphQL, a Recommendation System, Load Balancing, ELS Stack, CI/CD with Kubernetes and Jenkins, and a fully developed frontend.
+\par
+\noindent\textbf{Source:} \url{github.com/cngvc/theshopi}
 \resumeSubHeadingListEnd
 
 %-------------------------------------------
